--- a/index.html
+++ b/index.html
@@ -2,39 +2,43 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Bullpen Tracker Pro</title>
+<title>Bullpen Tracker App</title>
 
+<!-- App styling -->
 <style>
 body {
   font-family: Arial;
   background: #020617;
   color: white;
   text-align: center;
+  margin:0; padding:0;
 }
-
-h2 { margin: 5px; }
+h1,h2,h3 { margin: 5px; }
 
 canvas {
   border-radius: 12px;
   background: #0f172a;
-  margin: 10px;
+  margin: 10px auto;
+  display:block;
 }
 
-select, button, input {
-  padding: 10px;
-  margin: 6px;
+button, select, input {
+  padding: 8px;
+  margin: 5px;
   border-radius: 8px;
   border: none;
   font-size: 14px;
 }
 
-button {
-  background: #2563eb;
-  color: white;
-}
+button { background: #2563eb; color:white; cursor:pointer; }
 
-#app { display:none; }
+#app { display:none; max-width:350px; margin:auto; }
 </style>
+
+<!-- PWA manifest -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#020617">
+<meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 
 <body>
@@ -49,11 +53,10 @@ button {
 
 <!-- APP -->
 <div id="app">
-
 <h1>Bullpen Tracker Pro</h1>
 <div id="userDisplay"></div>
 
-<!-- PITCHERS -->
+<!-- Pitchers -->
 <input id="newPitcher" placeholder="Add pitcher">
 <button onclick="addPitcher()">Add</button>
 
@@ -62,7 +65,7 @@ button {
 
 <br>
 
-<!-- OPTIONS -->
+<!-- Options -->
 <select id="pitchType">
   <option>Four-Seam</option>
   <option>Two-Seam</option>
@@ -86,9 +89,11 @@ button {
 <h3>Stats</h3>
 <div id="stats"></div>
 
+<button onclick="exportCSV()">Export CSV</button>
 </div>
 
 <script>
+// --- User and data ---
 let user = "";
 let data = {};
 
@@ -98,14 +103,14 @@ const ctx = zone.getContext("2d");
 const heat = document.getElementById("heat");
 const heatCtx = heat.getContext("2d");
 
-// LOGIN
-function login(){
-  user = document.getElementById("username").value;
+// --- LOGIN ---
+function login() {
+  user = document.getElementById("username").value.trim();
   if(!user) return alert("Enter name");
 
-  document.getElementById("login").style.display="none";
-  document.getElementById("app").style.display="block";
-  document.getElementById("userDisplay").innerText="User: "+user;
+  document.getElementById("login").style.display = "none";
+  document.getElementById("app").style.display = "block";
+  document.getElementById("userDisplay").innerText = "User: "+user;
 
   loadData();
   updatePitchers();
@@ -114,33 +119,28 @@ function login(){
   updateStats();
 }
 
-// STORAGE
-function saveData(){
-  localStorage.setItem("bullpen_"+user, JSON.stringify(data));
-}
-
-function loadData(){
+// --- STORAGE ---
+function saveData(){ localStorage.setItem("bullpen_"+user, JSON.stringify(data)); }
+function loadData(){ 
   const saved = localStorage.getItem("bullpen_"+user);
   data = saved ? JSON.parse(saved) : {};
 }
 
-// PITCHERS
+// --- PITCHERS ---
 function addPitcher(){
   const name = document.getElementById("newPitcher").value.trim();
   if(!name) return;
-
   if(!data[name]) data[name]=[];
   saveData();
   updatePitchers();
+  document.getElementById("newPitcher").value="";
 }
-
 function deletePitcher(){
   const name = document.getElementById("pitcherSelect").value;
   delete data[name];
   saveData();
   updatePitchers();
 }
-
 function updatePitchers(){
   const select = document.getElementById("pitcherSelect");
   select.innerHTML="";
@@ -152,23 +152,18 @@ function updatePitchers(){
   }
 }
 
-// DRAW STRIKE ZONE GRID
+// --- DRAW STRIKE ZONE GRID ---
 function drawZone(){
   ctx.clearRect(0,0,320,420);
-
   ctx.strokeStyle="white";
   ctx.lineWidth=2;
-
-  // outer
   ctx.strokeRect(80,100,160,200);
-
-  // grid lines (3x3)
+  // 3x3 grid
   for(let i=1;i<3;i++){
     ctx.beginPath();
     ctx.moveTo(80+i*53,100);
     ctx.lineTo(80+i*53,300);
     ctx.stroke();
-
     ctx.beginPath();
     ctx.moveTo(80,100+i*66);
     ctx.lineTo(240,100+i*66);
@@ -176,26 +171,19 @@ function drawZone(){
   }
 }
 
-// CLICK INPUT
+// --- RECORD PITCH ---
 zone.addEventListener("click", function(e){
   const pitcher = document.getElementById("pitcherSelect").value;
   if(!pitcher) return alert("Select pitcher");
-
   const rect = zone.getBoundingClientRect();
   const x = e.clientX - rect.left;
   const y = e.clientY - rect.top;
 
-  const pitch = {
-    x,y,
-    type: document.getElementById("pitchType").value,
-    date: new Date().toLocaleDateString()
-  };
-
+  const pitch = {x,y,type:document.getElementById("pitchType").value,date:new Date().toLocaleDateString()};
   data[pitcher].push(pitch);
   saveData();
 
   drawZone();
-
   ctx.fillStyle="yellow";
   ctx.beginPath();
   ctx.arc(x,y,4,0,Math.PI*2);
@@ -205,11 +193,9 @@ zone.addEventListener("click", function(e){
   updateStats();
 });
 
-// HEATMAP (DENSITY STYLE)
+// --- HEATMAP ---
 function drawHeat(){
   heatCtx.clearRect(0,0,320,420);
-
-  // strike zone overlay
   heatCtx.strokeStyle="white";
   heatCtx.strokeRect(80,100,160,200);
 
@@ -218,21 +204,17 @@ function drawHeat(){
   const pitchType=document.getElementById("pitchType").value;
 
   let pitches=[];
-
   if(mode==="team"){
     for(let p in data) pitches=pitches.concat(data[p]);
   } else {
     pitches=data[pitcher]||[];
-    if(mode==="pitch"){
-      pitches=pitches.filter(p=>p.type===pitchType);
-    }
+    if(mode==="pitch") pitches=pitches.filter(p=>p.type===pitchType);
   }
 
   pitches.forEach(p=>{
     let grd=heatCtx.createRadialGradient(p.x,p.y,2,p.x,p.y,20);
     grd.addColorStop(0,"rgba(255,0,0,0.6)");
     grd.addColorStop(1,"rgba(255,0,0,0)");
-
     heatCtx.fillStyle=grd;
     heatCtx.beginPath();
     heatCtx.arc(p.x,p.y,20,0,Math.PI*2);
@@ -240,34 +222,46 @@ function drawHeat(){
   });
 }
 
-// STATS
+// --- STATS ---
 function updateStats(){
   const pitcher=document.getElementById("pitcherSelect").value;
   if(!pitcher||!data[pitcher]) return;
-
   const pitches=data[pitcher];
-
   let strikes=0;
-  pitches.forEach(p=>{
-    if(p.x>=80&&p.x<=240&&p.y>=100&&p.y<=300) strikes++;
-  });
-
+  pitches.forEach(p=>{ if(p.x>=80&&p.x<=240&&p.y>=100&&p.y<=300) strikes++; });
   let percent=((strikes/pitches.length)*100).toFixed(1);
+  // Daily counts
+  let daily={};
+  pitches.forEach(p=>{ daily[p.date]=(daily[p.date]||0)+1; });
+  let dailyText="";
+  for(let d in daily){ dailyText+=`${d}: ${daily[d]}<br>`; }
 
   document.getElementById("stats").innerHTML=
-    `Total: ${pitches.length}<br>Strike %: ${percent}%`;
+    `Total Pitches: ${pitches.length}<br>Strike %: ${percent}%<br><b>Daily:</b><br>${dailyText}`;
 }
 
-// LISTENERS
+// --- EXPORT CSV ---
+function exportCSV(){
+  let csv="Pitcher,Type,X,Y,Date\n";
+  for(let p in data){
+    data[p].forEach(row=>{
+      csv+=`${p},${row.type},${row.x},${row.y},${row.date}\n`;
+    });
+  }
+  let blob=new Blob([csv],{type:'text/csv'});
+  let a=document.createElement("a");
+  a.href=URL.createObjectURL(blob);
+  a.download="bullpen.csv";
+  a.click();
+}
+
+// --- EVENT LISTENERS ---
 document.getElementById("pitcherSelect").addEventListener("change", ()=>{
   drawHeat();
   updateStats();
 });
-
 document.getElementById("viewMode").addEventListener("change", drawHeat);
 document.getElementById("pitchType").addEventListener("change", drawHeat);
-
 </script>
-
 </body>
 </html>
